# charta-mcp

./: AGENTS.md  README.md  package-lock.json  package.json  server.json
python/: README.md  pyproject.toml
python/src/charta/: __init__.py  client.py  models.py
python/tests/: test_client.py  test_models.py
src/: api.test.ts  api.ts  index.ts  schemas.ts  types.ts
src/charts/: area.ts  bar.ts  extras.ts  index.ts  line.ts  pie.ts  scatter.ts  waterfall.ts
supabase/migrations/: 20260402000000_add_get_credits_by_api_key.sql  20260402000001_add_decrement_credits_by_api_key.sql  20260402104500_atomic_credit_reservation.sql
