[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charta"
version = "1.1.0"
description = "Python SDK for Charta — typed chart schemas and API client for AI-powered chart generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Charta", email = "hello@getcharta.ai" }]
keywords = ["charts", "visualization", "svg", "ai", "mcp", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3",
    "httpx>=0.25,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://getcharta.ai"
Repository = "https://github.com/mortenator/charta-mcp"
Documentation = "https://github.com/mortenator/charta-mcp/tree/main/python"

[tool.hatch.build.targets.wheel]
packages = ["src/charta"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
